--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <p class="title">Random Password Generated</p>
             </div>
             <div class="inputbox">
-                <input class="input" type="text"  placeholder="">
+                <input class="input" type="text"  placeholder="Password generate" >
             </div>
             <div class="sliderbox">
                 <p class="lo">Password Lenght </p>
@@ -28,7 +28,7 @@
 
 
             <div class="checkbox">
-                <input type="checkbox" class="inputcheckbox"  id="uppercase" >
+                <input type="checkbox" class="inputcheckbox"  id="uppercase" checked >
                 <label for="uppercase">Include Uppercase letters (A-Z)</label>
             </div>
 
@@ -38,7 +38,7 @@
             </div>
 
             <div class="checkbox">
-                <input type="checkbox" class="inputcheckbox"  id="numbers" >
+                <input type="checkbox" class="inputcheckbox"  id="numbers"  checked>
                 <label for="numbers">Include Numbers (0-9)</label>
             </div>
 
